--- a/gst-plugins-bad/NEWS
+++ b/gst-plugins-bad/NEWS
@@ -1,4 +1,32 @@
-This is GStreamer Bad Plug-ins 0.10.11, "More than I can handle"
+This is GStreamer Bad Plug-ins 0.10.13, "Supersonic Rocket"
+
+Changes since 0.10.12:
+    
+      * New shapewipe video transition plugin
+      * qtmux improvements
+      * camerabin improvements
+      * HDV MPEG-TS private streams support
+      * Output interlacing information in mpegvideoparse
+      * MS-ADPCM decoder
+      * RTP fixes and enhancements
+      * DTS decoder improvements
+      * New ID3 tagging plugin that supports v1, v2.3 and v2.4
+      * Support for PGS (BluRay) subtitles
+      * Many other bug fixes and enhancements
+
+Bugs fixed since 0.10.12:
+     
+      * 584945 : camerabin unit tests failing
+      * 511097 : Support self-signed certificates in neonhttpsrc
+      * 561752 : GstRtpBin implement Release pad functions
+      * 584164 : gstspu-pgs.c warnings for format string args and uninitia...
+      * 584165 : rtpbin sdes message broken
+      * 584360 : gppmux ftyp
+      * 585015 : debugutils can't find libgstinterfaces
+      * 585660 : segfault in scaletempo plugin
+      * 584114 : gppmux and h263
+      * 583188 : Problem with sdp: bind failed or video disappear after fe...
+      * 583627 : statistic file name needs to be standardized
 
 Changes since 0.10.11:
     
