--- a/gst-plugins-good/po/az.po
+++ b/gst-plugins-good/po/az.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-20 21:09+0100\n"
+"POT-Creation-Date: 2009-06-19 14:43+0100\n"
 "PO-Revision-Date: 2004-03-19 18:29+0200\n"
 "Last-Translator: Metin Amiroff <metin@karegen.com>\n"
 "Language-Team: Azerbaijani <translation-team-az@lists.sourceforge.net>\n"
@@ -166,6 +166,25 @@ msgid "Could not open audio device for recording."
 msgstr "CD avadanlığı oxuma üçün açıla bilmədi."
 
 msgid "Gain"
+msgstr ""
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Spiker"
+
+msgid "Headphone"
+msgstr ""
+
+msgid "Line Out"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
 msgstr ""
 
 #, fuzzy, c-format
@@ -378,10 +397,6 @@ msgstr ""
 
 #~ msgid "Could not open device \"%s\" for reading."
 #~ msgstr "\"%s\" avadanlığı oxuma üçün açıla bilmədi."
-
-#, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "Spiker"
 
 #~ msgid "Could not open vfs file \"%s\" for reading."
 #~ msgstr "\"%s\" vfs faylı oxuma üçün açıla bilmədi."
