--- a/gst-plugins-good/po/da.po
+++ b/gst-plugins-good/po/da.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-20 21:09+0100\n"
+"POT-Creation-Date: 2009-06-19 14:43+0100\n"
 "PO-Revision-Date: 2008-10-11 23:54+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -173,6 +173,25 @@ msgstr "Kunne ikke åbne lydenhed til optagelse."
 
 msgid "Gain"
 msgstr "Forhøjelse"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Højtaler"
+
+msgid "Headphone"
+msgstr ""
+
+msgid "Line Out"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
 
 #, fuzzy, c-format
 msgid "Error reading %d bytes from device '%s'."
