--- a/gst-plugins-good/po/fr.po
+++ b/gst-plugins-good/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.10.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-20 21:09+0100\n"
+"POT-Creation-Date: 2009-06-19 14:43+0100\n"
 "PO-Revision-Date: 2008-10-21 09:30+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -176,6 +176,25 @@ msgstr "Impossible d'ouvrir le périphérique audio pour l'enregistrement."
 
 msgid "Gain"
 msgstr "Gain"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Haut-parleur"
+
+msgid "Headphone"
+msgstr ""
+
+msgid "Line Out"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
 
 #, fuzzy, c-format
 msgid "Error reading %d bytes from device '%s'."
