--- a/gst-plugins-good/po/ja.po
+++ b/gst-plugins-good/po/ja.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-20 21:09+0100\n"
+"POT-Creation-Date: 2009-06-19 14:43+0100\n"
 "PO-Revision-Date: 2006-08-08 19:05+0200\n"
 "Last-Translator: Takao Fujiwara <takao.fujiwara@sun.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
@@ -192,6 +192,26 @@ msgstr "CD デバイスを読み取り用に開くことができません。"
 # SUN REVIEWED
 msgid "Gain"
 msgstr "ゲイン"
+
+# SUN REVIEWED
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "スピーカ"
+
+msgid "Headphone"
+msgstr ""
+
+msgid "Line Out"
+msgstr ""
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
 
 # SUN REVIEWED
 #, fuzzy, c-format
