--- a/gst-plugins-good/po/sv.po
+++ b/gst-plugins-good/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-20 21:09+0100\n"
+"POT-Creation-Date: 2009-06-19 14:43+0100\n"
 "PO-Revision-Date: 2009-05-12 17:41+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -175,6 +175,26 @@ msgstr "Kunde inte öppna ljudenheten för inspelning."
 
 msgid "Gain"
 msgstr "Förstärk"
+
+#, fuzzy
+msgid "Built-in Speaker"
+msgstr "Högtalare"
+
+msgid "Headphone"
+msgstr ""
+
+#, fuzzy
+msgid "Line Out"
+msgstr "Linje"
+
+msgid "SPDIF Out"
+msgstr ""
+
+msgid "AUX 1 Out"
+msgstr ""
+
+msgid "AUX 2 Out"
+msgstr ""
 
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
@@ -426,10 +446,6 @@ msgstr "Kan inte fungera utan en klocka"
 #~ msgstr "Övergripande"
 
 #, fuzzy
-#~ msgid "PC Speaker"
-#~ msgstr "Högtalare"
-
-#, fuzzy
 #~ msgid "Playback"
 #~ msgstr "Spela"
 
@@ -482,9 +498,6 @@ msgstr "Kan inte fungera utan en klocka"
 #~ msgstr ""
 #~ "Inget användbart namnrymdselement kunde hittas.\n"
 #~ "Installera ett och starta om."
-
-#~ msgid "Line"
-#~ msgstr "Linje"
 
 #~ msgid "Digital"
 #~ msgstr "Digital"
