--- a/gstreamer/po/ca.po
+++ b/gstreamer/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 13:51+0100\n"
+"POT-Creation-Date: 2009-07-14 16:33+0100\n"
 "PO-Revision-Date: 2005-12-02 17:43+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -598,7 +598,7 @@ msgid "geo location name"
 msgstr "ubicació"
 
 msgid ""
-"human readable descriptive location or where the media has been recorded or "
+"human readable descriptive location of where the media has been recorded or "
 "produced"
 msgstr ""
 
@@ -1017,14 +1017,6 @@ msgstr "S'està establint el conducte a NUL ...\n"
 #, fuzzy
 msgid "Freeing pipeline ...\n"
 msgstr "S'està establint el conducte a NUL ...\n"
-
-#, fuzzy
-#~ msgid "Error while writing to file descriptor \"%d\"."
-#~ msgstr "S'ha produït un error en escriure al fitxer «%s»."
-
-#, fuzzy
-#~ msgid "Error while seeking in file \"%d\"."
-#~ msgstr "S'ha produït un error en escriure al fitxer «%s»."
 
 #~ msgid "Internal GStreamer error: state change failed."
 #~ msgstr ""
