--- a/gstreamer/po/es.po
+++ b/gstreamer/po/es.po
@@ -1,14 +1,14 @@
-# translation of gstreamer-0.10.21.3.po to Español
+# translation of gstreamer-0.10.22.2.po to Español
 # spanish translation for gstreamer
 # This file is put in the public domain.
 #
-# Jorge González González <aloriel@gmail.com>, 2007, 20, 2009.
+# Jorge González González <aloriel@gmail.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.21.3\n"
+"Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 13:51+0100\n"
-"PO-Revision-Date: 2009-04-04 13:33+0200\n"
+"POT-Creation-Date: 2009-07-14 16:33+0100\n"
+"PO-Revision-Date: 2009-06-11 14:08+0200\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -367,12 +367,13 @@ msgstr ""
 "Origen del medio como un URI (ubicación, donde está alojado el archivo o "
 "flujo original)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "imagen"
+msgstr "página principal"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
 msgstr ""
+"Página principal para este soporte (ej. página principal del artista o "
+"película)"
 
 msgid "description"
 msgstr "descripción"
@@ -448,27 +449,25 @@ msgid "codec"
 msgstr "cídec"
 
 msgid "codec the data is stored in"
-msgstr "el códec en el que están almacenados los datos"
+msgstr "códec en el que están almacenados los datos"
 
 msgid "video codec"
 msgstr "códec de vídeo"
 
 msgid "codec the video data is stored in"
-msgstr "los datos del códec de vídeo se almacenan en"
+msgstr "códec en el que están almacenados los datos del vídeo"
 
 msgid "audio codec"
 msgstr "códec de sonido"
 
 msgid "codec the audio data is stored in"
-msgstr "los datos del códec de sonido se almacenan en"
+msgstr "códec en el que están almacenados los datos del sonido"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "códec de vídeo"
+msgstr "códec del subtítulo"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "los datos del códec de vídeo se almacenan en"
+msgstr "códec en el que están almacenados los datos del subtítulo"
 
 #, fuzzy
 msgid "container format"
@@ -476,7 +475,7 @@ msgstr "información de contacto"
 
 #, fuzzy
 msgid "container format the data is stored in"
-msgstr "el códec en el que están almacenados los datos"
+msgstr "códec en el que están almacenados los datos"
 
 msgid "bitrate"
 msgstr "tasa de bits"
@@ -589,8 +588,9 @@ msgstr "palabras clave separadas por comas describiendo el contenido"
 msgid "geo location name"
 msgstr "nombre de la geoubicación"
 
+#, fuzzy
 msgid ""
-"human readable descriptive location or where the media has been recorded or "
+"human readable descriptive location of where the media has been recorded or "
 "produced"
 msgstr ""
 "descripción de la ubicación entendible por humanos o dónde se ha grabado o "
@@ -830,8 +830,7 @@ msgid "No such element or plugin '%s'\n"
 msgstr "No existe el elemento o complemento «%s»\n"
 
 msgid "Usage: gst-xmllaunch <file.xml> [ element.property=value ... ]\n"
-msgstr ""
-"Uso: gst-xmllaunch <archivo.xml> [ propiedad.del.elemento=valor ... ]\n"
+msgstr "Uso: gst-xmllaunch <archivo.xml> [ propiedad.del.elemento=valor … ]\n"
 
 #, c-format
 msgid "ERROR: parse of xml file '%s' failed.\n"
@@ -843,10 +842,9 @@ msgstr ""
 "ERROR: no existe el elemento de nivel superior de la segmentación en el "
 "archivo «%s».\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
 msgstr ""
-"ADVERTENCIA: en este momento sólo se soporta un elemento de nivel superior."
+"ADVERTENCIA: en este momento sólo se soporta un elemento de nivel superior.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -905,28 +903,28 @@ msgid "WARNING: from element %s: %s\n"
 msgstr "ADVERTENCIA: del elemento %s: %s\n"
 
 msgid "Prerolled, waiting for buffering to finish...\n"
-msgstr "Preparado, esperando a llenar el búfer para terminar...\n"
+msgstr "Preparado, esperando a llenar el búfer para terminar…\n"
 
 msgid "buffering..."
-msgstr "almacenando en el búfer..."
+msgstr "almacenando en el búfer…"
 
 msgid "Done buffering, setting pipeline to PLAYING ...\n"
 msgstr ""
 "Se terminó de almacenar en el búfer, estableciendo la segmentación para "
-"REPRODUCIR...\n"
+"REPRODUCIR…\n"
 
 msgid "Buffering, setting pipeline to PAUSED ...\n"
-msgstr "almacenando en el búfer, estableciendo la segmentación a PAUSA...\n"
+msgstr "almacenando en el búfer, estableciendo la segmentación a PAUSA…\n"
 
 msgid "Redistribute latency...\n"
-msgstr "Redistribuir latencia...\n"
+msgstr "Redistribuir latencia…\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Estableciendo el estado a %s según lo solicitó %s…\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
-msgstr "Interrumpir: parando el conducto ...\n"
+msgstr "Interrumpir: parando el conducto …\n"
 
 msgid "Output tags (also known as metadata)"
 msgstr "Etiquetas de salida (también conocidos como metadatos)"
@@ -934,9 +932,8 @@ msgstr "Etiquetas de salida (también conocidos como metadatos)"
 msgid "Output status information and property notifications"
 msgstr "Información de estado de la salida y notificaciones de las propiedades"
 
-#, fuzzy
 msgid "Do not print any progress information"
-msgstr "No sacar la salida de la información de estado del TIPO"
+msgstr "No mostrar ninguna información de progreso"
 
 msgid "Output messages"
 msgstr "Mensajes de salida"
@@ -945,7 +942,7 @@ msgid "Do not output status information of TYPE"
 msgstr "No sacar la salida de la información de estado del TIPO"
 
 msgid "TYPE1,TYPE2,..."
-msgstr "TIPO1,TIPO2,..."
+msgstr "TIPO1,TIPO2,…"
 
 msgid "Save xml representation of pipeline to FILE and exit"
 msgstr "Guardar la representación xml del conducto a un ARCHIVO y salir"
@@ -960,7 +957,7 @@ msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Imprimir la traza de asignaciones (si se activó al compilar)"
 
 msgid "Force EOS on sources before shutting the pipeline down"
-msgstr ""
+msgstr "Forzar EOS en las fuentes antes de cerrar la tubería"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -977,67 +974,61 @@ msgid "ERROR: the 'pipeline' element wasn't found.\n"
 msgstr "ERROR: el elemento «conducto» no se encontró.\n"
 
 msgid "Setting pipeline to PAUSED ...\n"
-msgstr "Estableciendo el conducto a PAUSA ...\n"
+msgstr "Estableciendo el conducto a PAUSA …\n"
 
 msgid "ERROR: Pipeline doesn't want to pause.\n"
 msgstr "ERROR: El conducto no quiere pausarse.\n"
 
 msgid "Pipeline is live and does not need PREROLL ...\n"
-msgstr "El conducto está vivo y no necesita PREPARARSE ...\n"
+msgstr "El conducto está vivo y no necesita PREPARARSE …\n"
 
 msgid "Pipeline is PREROLLING ...\n"
-msgstr "El conducto está PREPARÁNDOSE ...\n"
+msgstr "El conducto está PREPARÁNDOSE …\n"
 
 msgid "ERROR: pipeline doesn't want to preroll.\n"
 msgstr "ERROR: el conducto no quiere prepararse.\n"
 
 msgid "Pipeline is PREROLLED ...\n"
-msgstr "El conducto está PREPARADO ...\n"
+msgstr "El conducto está PREPARADO …\n"
 
 msgid "Setting pipeline to PLAYING ...\n"
-msgstr "Estableciendo el conducto a REPRODUCIENDO ...\n"
+msgstr "Estableciendo el conducto a REPRODUCIENDO …\n"
 
 msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "ERROR: el conducto no quiere reproducir.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
-msgstr ""
+msgstr "EOS al apagar activado; Forzando EOS en la tubería\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "Esperando a EOS…\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Interrumpir: parando el conducto ...\n"
+msgstr "EOS recibido: parando el conducto …\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Ocurrió un error al esperar a EOS\n"
 
 msgid "Execution ended after %"
 msgstr "La ejecución finalizó después de %"
 
 msgid "Setting pipeline to READY ...\n"
-msgstr "Estableciando el conducto a PREPARADO ...\n"
+msgstr "Estableciando el conducto a PREPARADO …\n"
 
 msgid "Setting pipeline to NULL ...\n"
-msgstr "Estableciendo el conducto a NULL ...\n"
+msgstr "Estableciendo el conducto a NULL …\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Estableciendo el conducto a NULL ...\n"
+msgstr "Liberando la tubería…\n"
+
+#~ msgid "Internal GStreamer error: state change failed."
+#~ msgstr "Error interno de GStreamer: falló el cambio de estado."
 
 #~ msgid "Error while writing to file descriptor \"%d\"."
 #~ msgstr "Error al escribir el descriptor del archivo «%d»."
 
-#, fuzzy
-#~ msgid "Error while seeking in file \"%d\"."
-#~ msgstr "Error al buscar en el archivo «%s»."
-
 #~ msgid "File descriptor \"%d\" is not valid."
 #~ msgstr "El descriptor del archivo «%d» no es válido."
-
-#~ msgid "Internal GStreamer error: state change failed."
-#~ msgstr "Error interno de GStreamer: falló el cambio de estado."
 
 #~ msgid "FREEING pipeline ...\n"
 #~ msgstr "LIBERANDO el conducto ...\n"
